chooooi 코드 수정